MAT-15948, flytte minimeringen av jvm til brukeren av pluginen - det er bare brukerapplikasjonen som vet hvilke moduler/localer som trengs